<resources>
    <string name="app_name">Aic</string>
    <string name="connectivity">连接方式</string>
    <string name="zc">zc</string>
    <string name="sip">sip</string>
    <string name="ip">ip</string>
    <string name="sip_register">注册</string>
    <string name="connector">连接</string>
    <string name="peer">远端</string>
    <string name="peerIdentify">远端标识</string>
    <string name="services">请输入服务器地址</string>
    <string name="loadAddress">从地址本中选择</string>
    <string name="contactsHeadline">地址本</string>
    <string name="login">登录</string>
    <string name="account">用户名</string>
    <string name="pwd">密码</string>
    <string name="close">关闭</string>
    <string name="hide">hide</string>
    <string name="show">show</string>
    <string name="toolsHeadline">动作</string>
    <string name="send_cad">发送Ctrl+Alt+Del</string>
    <string name="locked">锁定远程计算机</string>
    <string name="reboot">重启远程计算机</string>
    <string name="start_menu">呼出开始菜单</string>
    <string name="sourcelist">请选择主机</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="settingsHeadline">设置</string>
    <string name="session">会话信息</string>
    <string name="cursor">显示远程光标</string>
    <string name="quality">显示质量</string>
    <string name="address">地址本</string>
    <string name="shower">不再显示该提示框</string>
    <string name="continuous">继续</string>
    <string name="duration">会话时长</string>
    <string name="resolution">显示分辨率</string>
    <string name="version">版本号</string>
    <string name="right">版权说明</string>
    <string name="auto">自动</string>
    <string name="opti_quality">优化质量</string>
    <string name="opti_speed">优化速度</string>
    <string name="title_activity_ipconnect">Ipconnect</string>
</resources>
