<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnectManager"
    android:background="@drawable/main_background"

    android:paddingTop="@dimen/panel_paddingTop"
    >


    <LinearLayout
        android:id="@+id/connectivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/connectivity" />

        <Button
            android:id="@+id/zc"
            android:layout_width="@dimen/service_controls_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/service_margin"
            android:background="@drawable/service_white_control_bg"
            android:paddingTop="@dimen/service_controls_padding"
            android:paddingBottom="@dimen/service_controls_padding"
            android:text="@string/zc"
            android:textColor="@drawable/service_white_control_color"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/sip"
            android:layout_width="@dimen/service_controls_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/service_margin"
            android:background="@drawable/service_white_control_bg"
            android:paddingTop="@dimen/service_controls_padding"
            android:paddingBottom="@dimen/service_controls_padding"
            android:text="@string/sip"
            android:textColor="@drawable/service_white_control_color"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/ip"
            android:layout_width="@dimen/service_controls_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/service_margin"
            android:background="@drawable/service_white_control_bg"
            android:paddingTop="@dimen/service_controls_padding"
            android:paddingBottom="@dimen/service_controls_padding"
            android:text="@string/ip"
            android:textColor="@drawable/service_white_control_color"
            android:onClick="onClick"/>
    </LinearLayout>



</LinearLayout>